[package]
name = "bit-parallelism"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Small integer specialized word level parallel algoriths and data structures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# standard crate data is left out
[dev-dependencies]
rand = "0.8.3"
pretty_assertions = "1"
