[package]
name = "bit-parallelism"
version = "0.1.3"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Small integer specialized, word level, parallel algorithms and data structures"
rust-version = "1.64"
authors = ["jlikhuva <jlikhuva@alumni.stanford.edu>"]
readme = "README.md"
repository = "https://github.com/jlikhuva/k2m2/tree/main/bit-parallelism"
homepage = "https://github.com/jlikhuva/blog/blob/main/posts/mathematical-sciences/wlp.md"
keywords = ["bit-level-algorithms", "four-russians", "x-fast-trie", "y-fast-trie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# standard crate data is left out
[dev-dependencies]
rand = "0.8.3"
pretty_assertions = "1"
